[package]
name = "leap-lang"
version = "0.1.0"
authors = ["Roman Kudryavtsev <rskbox@gmail.com>"]
license-file = "LICENSE.txt"
description = "Leap language parser"
repository = "https://github.com/rsk700/leap-lang"
readme = "README.md"
edition = "2018"

keywords = ["parser", "lang", "language"]
categories = ["parsing"]
