[package]
name = "leap-lang"
version = "0.1.7"
authors = ["Roman Kudryavtsev <rskbox@gmail.com>"]
license = "MIT"
description = "Leap language parser"
repository = "https://github.com/rsk700/leap-lang"
readme = "README.md"
edition = "2021"

keywords = ["parser", "lang", "language"]
categories = ["parsing"]
